# src/main/java/com/plip/video/application/port/in/dto/VideoDestinationResult.java
@@ -1,0 +1,9 @@
+package com.plip.video.application.port.in.dto;
+
+import java.util.UUID;
+
+public record VideoDestinationResult(
+		UUID videoUuid,
+		String status
+) {
+}
