# src/main/java/com/plip/video/application/port/in/dto/VideoOwnershipResult.java
@@ -1,0 +1,9 @@
+package com.plip.video.application.port.in.dto;
+
+import java.util.UUID;
+
+public record VideoOwnershipResult(
+		UUID videoUuid,
+		UUID userUuid
+) {
+}
