# src/main/java/com/plip/video/application/port/out/dto/TopicVideoUploadedMessage.java
@@ -1,0 +1,13 @@
+package com.plip.video.application.port.out.dto;
+
+import java.time.Instant;
+import java.util.UUID;
+
+public record TopicVideoUploadedMessage(
+		UUID topicUuid,
+		UUID videoUuid,
+		UUID userUuid,
+		String caption,
+		Instant occurredAt
+) {
+}
